src/res/parser.c
#include <stdio.h>
#include <stdlib.h>
#include <stdbool.h>
#include <string.h>
#include "scanner.h"
#include "parser.h"
#include "symbol_table.h"
#include "strings.h"
#include "token_buffer.h"
#include "expr.h"
#include "memory_constants.h"
#include "error_codes.h"
#include "debug.h"

char *t_names[TOKENS_COUNT] = { "LEXICAL_ERROR", "ID", "INT_LITERAL", "DOUBLE_LITERAL", "ADD", "SUB", "MUL",
                                "DIV", "SEMICOLON", "LEFT_CURVED_BRACKET", "RIGHT_CURVED_BRACKET",
                                "LEFT_ROUNDED_BRACKET", "RIGHT_ROUNDED_BRACKET", "ASSIGN", "LOGICAL_AND",
                                "LOGICAL_OR", "COMMA", "NEG",  "STRING_LITERAL", "NOT_EQUAL", "LESS_EQUAL",
                                "LESS", "GREATER_EQUAL", "GREATER", "EQUAL", "SPECIAL_ID", "BOOLEAN", "BREAK",
                                "CLASS", "CONTINUE", "DO", "DOUBLE", "ELSE", "FALSE", "FOR", "IF", "INT", "RETURN",
                                "STRING", "STATIC", "TRUE", "VOID", "WHILE" };

int params_counter = 0;
bool is_first_pass = true;
bool is_second_pass = false;
bool has_function_return = false;
bool is_static_variable_declaration = false;
bool skip_precedence_analysis = false;

constant_t * mem_constants = NULL;
tList * global_inst_tape;

tList * function_inst_tape;
token_t t;
token_buffer_t token_buffer;

#define PARSE_ERROR 0
#define PARSED_OK 1

string_t param_data_types;
string_t local_vars_data_types;
symbol_table_item_t current_variable;
symbol_table_item_t function_variable;
symbol_table_item_t current_function;
symbol_table_item_t expr_result;


tVar * expr_var_result;

tVar * first_param;
tVar * second_param;

char* current_class;
char* function_name_call;

extern FILE* file;


void cleanup_resources() {
        fclose(file);
        DisposeList(global_inst_tape);
        js_free();
        free_constants(&mem_constants);
        free_token_buffer(&token_buffer);
        free_class_list();
}

int get_token() {
        if (is_first_pass) {
                t.string_value = NULL;
                get_next_token(&t);
                add_token_to_buffer(&token_buffer, &t);
        } else /* second pass */ {
                t = *get_next_token_buffer(&token_buffer);
        }
        if (t.type == LEXICAL_ERROR) {
                fprintf(stderr, "Lexical error: unknown token\n");
                exit(LEXICAL_ANALYSIS_ERROR);
        }
        return t.type;
}


int parse_expression(bool ends_semicolon) {

        if (t.type == SEMICOLON || t.type == RIGHT_ROUNDED_BRACKET || t.type == COMMA) {
                return PARSE_ERROR;
        }

        token_buffer_t tb;

        /* Prvy prechod vyhodnot vyraz u globalnej premmenej priamo */
        if (is_first_pass && is_static_variable_declaration) {
                init_token_buffer(&tb);
                while (1) {
                        if (t.type == SEMICOLON) break;

                        add_token_to_buffer(&tb, &t);

                        if (t.type == SPECIAL_ID) {
                                if (!is_special_id_declared(t.string_value)) {
                                        fprintf(stderr,"Expression: ID %s was not declared.\n", t.string_value);
                                        exit(SEMANTIC_ANALYSIS_OTHER_ERROR);
                                } else {
                                        symbol_table_item_t * item = get_symbol_table_special_id_item(t.string_value);
                                        if (item->is_function) {
                                                fprintf(stderr, "Expression: ID \'%s\' is declared as function.\n", t.string_value);
                                                exit(SYNTACTIC_ANALYSIS_ERROR);
                                        }
                                }
                        }
                        else if (t.type == ID) {
                                if (!is_declared(t.string_value)) {
                                        fprintf(stderr,"Expression: ID %s was not declared.\n", t.string_value);
                                        exit(SEMANTIC_ANALYSIS_OTHER_ERROR);
                                } else {
                                        symbol_table_item_t * item = get_symbol_table_class_item(current_class, t.string_value);
                                        if (item->is_function) {
                                                fprintf(stderr, "Expression: ID \'%s\' is declared as function.\n", t.string_value);
                                                exit(SYNTACTIC_ANALYSIS_ERROR);
                                        }
                                }
                        }
                        get_token();
                }
                get_psa(&tb, &expr_result,  &expr_var_result);
                free_token_buffer(&tb);
                return PARSED_OK;
        }

        if (is_second_pass) {
                /* Mozno je to funkcia, takze kukni na id do TS ci je alebo nie je */
                bool is_function = false;
                symbol_table_item_t * item = NULL;
                if (t.type == ID) {
                        symbol_table_t *function_symbol_table = get_symbol_table_for_function(current_class, current_function.id_name);
                        if (function_symbol_table == NULL || (function_symbol_table != NULL &&  !is_declared_in_function(function_symbol_table, t.string_value))) {
                                if (!is_declared(t.string_value)) {
                                        fprintf(stderr,"Expression: ID %s was not declared.\n", t.string_value);
                                        exit(SEMANTIC_ANALYSIS_PROGRAM_ERROR);
                                } else {
                                        item = get_symbol_table_class_item(current_class, t.string_value);
                                }
                        } else {
                                item = get_symbol_table_function_item(function_symbol_table, t.string_value);
                        }
                        if (item != NULL) {
                                is_function = item->is_function;
                        }
                } else if (t.type == SPECIAL_ID) {
                        item = get_symbol_table_special_id_item(t.string_value);
                        if (item == NULL) {
                                fprintf(stderr,"Expression: ID %s was not declared.\n", t.string_value);
                                exit(SEMANTIC_ANALYSIS_PROGRAM_ERROR);
                        }
                        is_function = item->is_function;
                }

                if (is_function) {
                        function_name_call = t.string_value;
                        expr_result = *item;
                        get_token();
                        if (t.type == LEFT_ROUNDED_BRACKET) {
                                if (parse_param_value()) {
                                        if (t.type == RIGHT_ROUNDED_BRACKET) {
                                                if (get_token() == SEMICOLON) {
                                                        if (is_second_pass) {
                                                                symbol_table_item_t *call_function = NULL;
                                                                if (strchr(function_name_call, '.') != NULL) {
                                                                        call_function = get_symbol_table_special_id_item(function_name_call);
                                                                } else {
                                                                        call_function = get_symbol_table_class_item(current_class, function_name_call);
                                                                }

                                                                if (call_function->function.params_count != params_counter) {
                                                                        fprintf(stderr, "Too many arguments when calling function \'%s\'\n", function_name_call);
                                                                        fprintf(stderr, "Function \'%s\' requires %d param(s) but is called with %d param(s).\n", function_name_call, call_function->function.params_count, params_counter);
                                                                        exit(SEMANTIC_ANALYSIS_PROGRAM_ERROR);
                                                                }

                                                                symbol_table_item_t *var = NULL;

                                                                if (strchr(function_variable.id_name, '.') != NULL) {
                                                                        var = get_symbol_table_special_id_item(function_variable.id_name);
                                                                } else {

                                                                        symbol_table_item_t * function = get_symbol_table_class_item(current_class, current_function.id_name);
                                                                        var = get_symbol_table_function_item(function->function.symbol_table, function_variable.id_name);
                                                                        if (var == NULL) {
                                                                                var = get_symbol_table_class_item(current_class, function_variable.id_name);
                                                                        }
                                                                }

                                                                tVar * res = &var->variable;
                                                                res->initialized = true;

                                                                if (strcmp(function_name_call, "ifj16.print") == 0) {
                                                                        InsertLast(function_inst_tape, generate(I_PRINT, first_param, NULL, NULL));
                                                                } else if (strcmp(function_name_call, "ifj16.readInt") == 0) {
                                                                        InsertLast(function_inst_tape, generate(I_RINT, NULL, NULL, res));
                                                                } else if (strcmp(function_name_call, "ifj16.readString") == 0) {
                                                                        InsertLast(function_inst_tape, generate(I_RSTR, NULL, NULL, res));
                                                                } else if (strcmp(function_name_call, "ifj16.readDouble") == 0) {
                                                                        InsertLast(function_inst_tape, generate(I_RDBL, NULL, NULL, res));
                                                                }  else if (strcmp(function_name_call, "ifj16.length") == 0) {
                                                                        InsertLast(function_inst_tape, generate(I_LEN, first_param, NULL, res));
                                                                } else if (strcmp(function_name_call, "ifj16.sort") == 0) {
                                                                        InsertLast(function_inst_tape, generate(I_SORT, first_param, NULL, res));
                                                                } else if (strcmp(function_name_call, "ifj16.find") == 0) {
                                                                        InsertLast(function_inst_tape, generate(I_FIND, first_param, second_param, res));
                                                                } else if (strcmp(function_name_call, "ifj16.compare") == 0) {
                                                                        InsertLast(function_inst_tape, generate(I_STRCMP, first_param, second_param, res));
                                                                } else if (strcmp(function_name_call, "ifj16.substr") == 0) {
                                                                        InsertLast(function_inst_tape, generate(I_SUBSTR, NULL, NULL, res));
                                                                } else {
                                                                        InsertLast(function_inst_tape, generate(I_F_CALL, call_function->function.instruction_tape, NULL, res));
                                                                }

                                                                first_param = second_param = expr_var_result = NULL;
                                                                params_counter = 0;
                                                        }
                                                        function_name_call = NULL;
                                                        return PARSED_OK;
                                                }
                                        }
                                }
                        }
                }
        }

        int brackets_counter = 0;
        if (is_second_pass) {
                init_token_buffer(&tb);
        }

        while (1) {
                if (ends_semicolon) {
                        if (t.type == SEMICOLON) break;
                } else {
                        if (t.type == LEFT_CURVED_BRACKET || t.type == SEMICOLON ||t.type == EOF) return PARSE_ERROR;  /* prevent loop */

                        if (t.type == RIGHT_ROUNDED_BRACKET) {
                                brackets_counter--;
                                if (brackets_counter != 0) {
                                        break;
                                }
                        }

                        if (t.type == LEFT_ROUNDED_BRACKET) {
                                brackets_counter++;
                        }

                        if (t.type == COMMA) break;
                }

                if (is_second_pass) {
                        add_token_to_buffer(&tb, &t);
                }

                if (is_second_pass) {
                        if (t.type == SPECIAL_ID) {
                                if (!is_special_id_declared(t.string_value)) {
                                        fprintf(stderr,"Expression: ID %s was not declared.\n", t.string_value);
                                        exit(SEMANTIC_ANALYSIS_PROGRAM_ERROR);
                                } else {
                                        symbol_table_item_t * item = get_symbol_table_special_id_item(t.string_value);
                                        if (item->is_function) {
                                                fprintf(stderr, "Expression: ID \'%s\' is declared as function.\n", t.string_value);
                                                exit(SEMANTIC_ANALYSIS_TYPE_COMPATIBILITY_ERROR);
                                        }
                                }
                        }
                        else if (t.type == ID) {
                                symbol_table_t *function_symbol_table = get_symbol_table_for_function(current_class, current_function.id_name);
                                if (function_symbol_table == NULL || (function_symbol_table != NULL &&  !is_declared_in_function(function_symbol_table, t.string_value))) {
                                        if (!is_declared(t.string_value)) {
                                                fprintf(stderr, "Expression: ID \'%s\' was not declared in the function nor in the class \'%s\'.\n", t.string_value, current_class);
                                                exit(SEMANTIC_ANALYSIS_PROGRAM_ERROR);
                                        } else {
                                                symbol_table_item_t * item =  get_symbol_table_class_item(current_class, t.string_value);
                                                if (item->is_function) {
                                                        fprintf(stderr, "Expression: ID \'%s\' is declared as function.\n", t.string_value);
                                                        exit(SEMANTIC_ANALYSIS_TYPE_COMPATIBILITY_ERROR);
                                                }
                                        }
                                }
                        }
                }
                get_token();
        }

        if (is_second_pass) {
                if (!skip_precedence_analysis) {
                        get_psa(&tb, &expr_result, &expr_var_result);
                }
                free_token_buffer(&tb);
        }
        return PARSED_OK;

}

int parse_return_value() {
        if (t.type == RETURN) {
                has_function_return = true;
                get_token();
                if (t.type == LEFT_ROUNDED_BRACKET || t.type == ID || t.type == SPECIAL_ID || t.type == INT_LITERAL || t.type == DOUBLE_LITERAL || t.type == STRING_LITERAL || t.type == TRUE || t.type == FALSE) {
                        if (is_first_pass) {
                                if (current_function.function.return_type == VOID) {
                                        fprintf(stderr, "Return in function \'%s\' with void return type.\n", current_function.id_name);
                                        exit(RUN_UNINITIALIZED_VARIABLE_ERROR);
                                }
                        }

                        if (parse_expression(true)) {
                                if (is_second_pass) {
                                        if (expr_result.id_name != NULL) {
                                                int expr_data_type = expr_result.variable.data_type;
                                                if (current_variable.variable.data_type != expr_data_type) {
                                                        if (current_variable.variable.data_type == DOUBLE && expr_data_type == INT) {
                                                                expr_var_result->data_type = DOUBLE;
                                                                InsertLast(function_inst_tape, generate(I_CONV_I_TO_D, expr_var_result, NULL, expr_var_result));
                                                        } else {
                                                                fprintf(stderr, "Bad return expression. Incompatible types to assign value.\n");
                                                                exit(SEMANTIC_ANALYSIS_TYPE_COMPATIBILITY_ERROR);
                                                        }
                                                }
                                        }

                                        InsertLast(function_inst_tape, generate(I_RETURN, expr_var_result, NULL, NULL));
                                        expr_var_result = NULL;
                                }
                                expr_result.id_name = NULL;

                                if (t.type == SEMICOLON) {
                                        return PARSED_OK;
                                }
                        }
                } else if (t.type == SEMICOLON) {
                        if (is_second_pass) {
                                InsertLast(function_inst_tape, generate(I_RETURN, NULL, NULL, NULL));
                        }
                        return PARSED_OK;
                }
        }

        return PARSE_ERROR;
}


int parse_next_param_value() {
        if (t.type == COMMA) {
                get_token();
                if (t.type == ID || t.type == SPECIAL_ID || t.type == INT_LITERAL || t.type == DOUBLE_LITERAL || t.type == STRING_LITERAL || t.type == TRUE || t.type == FALSE) { // EXPR HACK
                        if (is_second_pass) {
                                symbol_table_item_t * item = NULL;
                                int data_type = 0;
                                if (t.type == SPECIAL_ID) {
                                        if (!is_special_id_declared(t.string_value)) {
                                                fprintf(stderr, "Param \'%s\' for function \'%s.%s\' was not declared.\n", t.string_value, current_class, function_name_call);
                                                exit(SEMANTIC_ANALYSIS_PROGRAM_ERROR);
                                        } else {
                                                item = get_symbol_table_special_id_item(t.string_value);
                                                if (item->is_function) {
                                                        fprintf(stderr, "Param \'%s\' for function \'%s.%s\' is declared as function.\n", t.string_value, current_class, function_name_call);
                                                        exit(SEMANTIC_ANALYSIS_TYPE_COMPATIBILITY_ERROR);
                                                }
                                                data_type = item->variable.data_type;
                                        }
                                        second_param = &item->variable;
                                }
                                else if (t.type == ID) {
                                        symbol_table_t *function_symbol_table = get_symbol_table_for_function(current_class, current_function.id_name);
                                        if(function_symbol_table != NULL && is_declared_in_function(function_symbol_table, t.string_value)) {
                                                item = get_symbol_table_function_item(function_symbol_table, t.string_value);
                                                data_type = item->variable.data_type;
                                        } else {
                                                if (!is_declared(t.string_value)) {
                                                        fprintf(stderr, "Neither param \'%s\' for function \'%s.%s\' was not declared nor in the class \'%s\'.\n", t.string_value, current_class, function_name_call, current_class);
                                                        exit(SEMANTIC_ANALYSIS_PROGRAM_ERROR);
                                                } else {
                                                        item = get_symbol_table_class_item(current_class, t.string_value);
                                                        if (item->is_function) {
                                                                fprintf(stderr, "Param \'%s\' for function \'%s.%s\' is declared as function.\n", t.string_value, current_class, function_name_call);
                                                                exit(SEMANTIC_ANALYSIS_TYPE_COMPATIBILITY_ERROR);
                                                        }
                                                        data_type = item->variable.data_type;
                                                }
                                        }
                                        second_param = &item->variable;
                                } else {
                                        switch (t.type) {
                                        case INT_LITERAL: data_type = INT;
                                                break;
                                        case DOUBLE_LITERAL: data_type = DOUBLE;
                                                break;
                                        case STRING_LITERAL: data_type = STRING;
                                                break;
                                        case TRUE:
                                        case FALSE: data_type = BOOLEAN;
                                                break;
                                        }
                                }

                                symbol_table_item_t *function_item;
                                if (strchr(function_name_call, '.') != NULL) {
                                        function_item = get_symbol_table_special_id_item(function_name_call);
                                } else {
                                        function_item = get_symbol_table_class_item(current_class, function_name_call);
                                }

                                int expected_param_type = function_item->function.param_data_types[params_counter];

                                params_counter++;


                                if (params_counter > function_item->function.params_count) {
                                        fprintf(stderr, "Too many arguments when calling function \'%s\'\n", function_name_call);
                                        fprintf(stderr, "Function \'%s\' requires %d param(s) but is called with %d param(s).\n", function_name_call, function_item->function.params_count, params_counter);
                                        exit(SEMANTIC_ANALYSIS_TYPE_COMPATIBILITY_ERROR);
                                }

                                bool is_var = (t.type != ID && t.type != SPECIAL_ID);

                                switch (expected_param_type) {
                                case 's':
                                        if (data_type != STRING) {
                                                fprintf(stderr, "%d. parameter when calling function \'%s\' must be string.\n", params_counter, function_name_call);
                                                exit(SEMANTIC_ANALYSIS_TYPE_COMPATIBILITY_ERROR);
                                        }
                                        if (is_var) second_param = insert_string_const(&mem_constants, t.string_value);
                                        break;
                                case 'b':
                                        if (data_type != BOOLEAN) {
                                                fprintf(stderr, "%d. parameter when calling function \'%s\' must be boolean.\n", params_counter, function_name_call);
                                                exit(SEMANTIC_ANALYSIS_TYPE_COMPATIBILITY_ERROR);
                                        }

                                        bool val = (t.type == TRUE);
                                        if (is_var) second_param = insert_boolean_const(&mem_constants, val);
                                        break;
                                case 'i':
                                        if (data_type != INT) {
                                                fprintf(stderr, "%d. parameter when calling function \'%s\' must be int.\n", params_counter, function_name_call);
                                                exit(SEMANTIC_ANALYSIS_TYPE_COMPATIBILITY_ERROR);
                                        }
                                        if (is_var) second_param = insert_int_const(&mem_constants, t.int_value);
                                        break;
                                case 'd':
                                        if (data_type == INT) {
                                                second_param = &item->variable;
                                                double val = (double) t.int_value;
                                                if (is_var) {
                                                        second_param = insert_double_const(&mem_constants, val);
                                                } else {
                                                        second_param->data_type = DOUBLE;
                                                        InsertLast(function_inst_tape, generate(I_CONV_I_TO_D, second_param, NULL, second_param));
                                                }

                                        } else if (data_type != DOUBLE) {
                                                fprintf(stderr, "%d. parameter when calling function \'%s\' must be double.\n", params_counter, function_name_call);
                                                exit(SEMANTIC_ANALYSIS_TYPE_COMPATIBILITY_ERROR);
                                        } else {
                                                if (is_var) second_param = insert_double_const(&mem_constants, t.double_value);
                                        }
                                        break;
                                }

                                if (strstr(function_name_call, "ifj16.") == NULL || strcmp(function_name_call, "ifj16.substr") == 0) {
                                        InsertLast(function_inst_tape, generate(I_PUSH_PARAM, second_param, NULL, NULL));
                                }
                        }
                        get_token();
                        if (t.type == RIGHT_ROUNDED_BRACKET) {
                                return PARSED_OK;
                        } else if (t.type == COMMA) {
                                return parse_next_param_value();
                        }
                }
        }
        if (t.type == RIGHT_ROUNDED_BRACKET) {
                return PARSED_OK;
        }
        return PARSE_ERROR;
}

int parse_param_value () {
        if (is_second_pass) {
                params_counter = 0;

                d_print("CALL %s\n", function_name_call );

                if (strstr(function_name_call, "ifj16.") == NULL) {
                        symbol_table_item_t * function = NULL;
                        if (strchr(function_name_call, '.') != NULL) {
                                function = get_symbol_table_special_id_item(function_name_call);
                        }
                        else {
                                function = get_symbol_table_class_item(current_class, function_name_call);
                        }
                        InsertLast(function_inst_tape, generate(I_INIT_FRAME, function, NULL, NULL));
                } else {
                        if (strcmp(function_name_call, "ifj16.substr") == 0) {
                                symbol_table_item_t *  function = get_symbol_table_special_id_item(function_name_call);
                                InsertLast(function_inst_tape, generate(I_INIT_FRAME, function, NULL, NULL));
                        }
                }
        }
        if (t.type == LEFT_ROUNDED_BRACKET) {
                get_token();
                if (t.type == LEFT_ROUNDED_BRACKET || t.type == ID || t.type == SPECIAL_ID || t.type == INT_LITERAL || t.type == DOUBLE_LITERAL || t.type == STRING_LITERAL || t.type == TRUE || t.type == FALSE) { // EXPR HACK
                        if (strcmp(function_name_call, "ifj16.print") != 0) {
                                if (is_second_pass) {
                                        symbol_table_item_t * item;
                                        int data_type = 0;
                                        if (t.type == SPECIAL_ID) {
                                                if (!is_special_id_declared(t.string_value)) {
                                                        fprintf(stderr, "Parameter \'%s\' for function \'%s.%s\' was not declared.\n", t.string_value, current_class, function_name_call);
                                                        exit(SEMANTIC_ANALYSIS_PROGRAM_ERROR);
                                                } else {
                                                        item = get_symbol_table_special_id_item(t.string_value);
                                                        if (item->is_function) {
                                                                fprintf(stderr, "Parameter \'%s\' for function \'%s.%s\' is declared as function.\n", t.string_value, current_class, function_name_call);
                                                                exit(SEMANTIC_ANALYSIS_TYPE_COMPATIBILITY_ERROR);
                                                        }
                                                        data_type = item->variable.data_type;
                                                }

                                                first_param = &item->variable;
                                        }
                                        else if (t.type == ID) {
                                                symbol_table_t *function_symbol_table = get_symbol_table_for_function(current_class, current_function.id_name);
                                                if(function_symbol_table != NULL && is_declared_in_function(function_symbol_table, t.string_value)) {
                                                        item = get_symbol_table_function_item(function_symbol_table, t.string_value);
                                                        data_type = item->variable.data_type;
                                                } else {
                                                        if (!is_declared(t.string_value)) {
                                                                fprintf(stderr, "Neither param \'%s\' for function \'%s.%s\' was not declared nor in the class \'%s\'.\n", t.string_value, current_class, function_name_call, current_class);
                                                                exit(SEMANTIC_ANALYSIS_PROGRAM_ERROR);
                                                        } else {
                                                                item = get_symbol_table_class_item(current_class, t.string_value);
                                                                if (item->is_function) {
                                                                        fprintf(stderr, "Param \'%s\' for function \'%s.%s\' is declared as function.\n", t.string_value, current_class, function_name_call);
                                                                        exit(SEMANTIC_ANALYSIS_TYPE_COMPATIBILITY_ERROR);
                                                                }
                                                                data_type = item->variable.data_type;
                                                        }
                                                }
                                                first_param = &item->variable;
                                        } else {
                                                switch (t.type) {
                                                case INT_LITERAL: data_type = INT;
                                                        break;
                                                case DOUBLE_LITERAL: data_type = DOUBLE;
                                                        break;
                                                case STRING_LITERAL: data_type = STRING;
                                                        break;
                                                case TRUE:
                                                case FALSE: data_type = BOOLEAN;
                                                        break;
                                                }
                                        }

                                        symbol_table_item_t *function_item;
                                        if (strchr(function_name_call, '.') != NULL) {
                                                function_item = get_symbol_table_special_id_item(function_name_call);
                                        } else {
                                                function_item = get_symbol_table_class_item(current_class, function_name_call);
                                        }

                                        if (function_item->function.param_data_types == NULL) {
                                                fprintf(stderr, "Calling function \'%s\' with param(s) but function has no parameters.\n", function_name_call);
                                                exit(SEMANTIC_ANALYSIS_TYPE_COMPATIBILITY_ERROR);
                                        }

                                        bool is_var = (t.type != ID && t.type != SPECIAL_ID);

                                        int expected_param_type = function_item->function.param_data_types[params_counter];
                                        params_counter++;

                                        switch (expected_param_type) {
                                        case 's':
                                                if (data_type != STRING) {
                                                        fprintf(stderr, "%d. parameter when calling function \'%s\' must be string.\n", params_counter, function_name_call);
                                                        exit(SEMANTIC_ANALYSIS_TYPE_COMPATIBILITY_ERROR);
                                                }
                                                if (is_var) first_param = insert_string_const(&mem_constants, t.string_value);
                                                break;
                                        case 'b':
                                                if (data_type != BOOLEAN) {
                                                        fprintf(stderr, "%d. parameter when calling function \'%s\' must be boolean.\n", params_counter, function_name_call);
                                                        exit(SEMANTIC_ANALYSIS_TYPE_COMPATIBILITY_ERROR);
                                                }

                                                bool val = (t.type == TRUE);
                                                if (is_var) first_param = insert_boolean_const(&mem_constants, val);
                                                break;
                                        case 'i':
                                                if (data_type != INT) {
                                                        fprintf(stderr, "%d. parameter when calling function \'%s\' must be int.\n", params_counter, function_name_call);
                                                        exit(SEMANTIC_ANALYSIS_TYPE_COMPATIBILITY_ERROR);
                                                }
                                                if (is_var) first_param = insert_int_const(&mem_constants, t.int_value);
                                                break;
                                        case 'd':
                                                if (data_type == INT) {
                                                        double val = (double) t.int_value;
                                                        if (is_var) {
                                                                first_param = insert_double_const(&mem_constants, val);
                                                        } else {
                                                                first_param->data_type = DOUBLE;
                                                                InsertLast(function_inst_tape, generate(I_CONV_I_TO_D, first_param, NULL, first_param));
                                                        }

                                                } else if (data_type != DOUBLE) {
                                                        fprintf(stderr, "%d. parameter when calling function \'%s\' must be double.\n", params_counter, function_name_call);
                                                        exit(SEMANTIC_ANALYSIS_TYPE_COMPATIBILITY_ERROR);
                                                } else {
                                                        if (is_var) first_param = insert_double_const(&mem_constants, t.double_value);
                                                }
                                                break;
                                        }
                                        if (strstr(function_name_call, "ifj16.") == NULL || strcmp(function_name_call, "ifj16.substr") == 0) {
                                                InsertLast(function_inst_tape, generate(I_PUSH_PARAM, first_param, NULL, NULL));
                                        }
                                }
                                get_token();
                                if (t.type == COMMA) {
                                        return parse_next_param_value();
                                } else if (t.type == RIGHT_ROUNDED_BRACKET) {
                                        return PARSED_OK;
                                }
                        } else {
                                /* special case for ifj16.print */
                                if (parse_expression(false)) {
                                        if (is_second_pass) {
                                                first_param = expr_var_result;
                                                params_counter++;
                                        }
                                        if (t.type == RIGHT_ROUNDED_BRACKET) {
                                                return PARSED_OK;
                                        }
                                }
                        }
                } else if (t.type == RIGHT_ROUNDED_BRACKET) {
                        if (is_second_pass) {
                                symbol_table_item_t *function_item;
                                if (strchr(function_name_call, '.') != NULL) {
                                        function_item = get_symbol_table_special_id_item(function_name_call);
                                } else {
                                        function_item = get_symbol_table_class_item(current_class, function_name_call);
                                }

                                if (function_item->function.params_count > 0) {
                                        fprintf(stderr, "Missing arguments\n");
                                }
                        }
                        return PARSED_OK;
                }
        }
        else if (t.type == RIGHT_ROUNDED_BRACKET) {
                return PARSED_OK;
        }

        return PARSE_ERROR;
}

int parse_call_assign() {
        if (t.type == ID || t.type == SPECIAL_ID) {
                function_name_call = t.string_value;
                get_token();
                if (t.type == LEFT_ROUNDED_BRACKET) {
                        if (parse_param_value()) {
                                if (t.type == RIGHT_ROUNDED_BRACKET) {
                                        if (get_token() == SEMICOLON) {
                                                if (is_second_pass) {
                                                        symbol_table_item_t *function_item;
                                                        if (strchr(function_name_call, '.') != NULL) {
                                                                function_item = get_symbol_table_special_id_item(function_name_call);
                                                        } else {
                                                                function_item = get_symbol_table_class_item(current_class, function_name_call);
                                                        }
                                                        if (params_counter > function_item->function.params_count) {
                                                                fprintf(stderr, "Too many arguments when calling function \'%s\'\n", function_name_call);
                                                                fprintf(stderr, "Function \'%s\' requires %d param(s) but is called with %d param(s).\n", function_name_call, function_item->function.params_count, params_counter);
                                                                exit(SEMANTIC_ANALYSIS_TYPE_COMPATIBILITY_ERROR);
                                                        }
                                                        params_counter = 0;
                                                }
                                                function_name_call = NULL;
                                                return PARSED_OK;
                                        }
                                }
                        }
                } else if (t.type == ASSIGN || t.type == SEMICOLON) {
                        return parse_value();
                }
        }

        return PARSE_ERROR;
}

int parse_condition_list() {
        if (t.type == RETURN || t.type == ID || t.type == SPECIAL_ID || t.type == IF || t.type == WHILE) {
                if (parse_statement()) {
                        return PARSED_OK;
                }
        } else if (t.type == LEFT_CURVED_BRACKET) {
                get_token();
                if (parse_statement_list()) {
                        get_token();
                        if (t.type == ELSE || t.type == LEFT_CURVED_BRACKET || t.type == RIGHT_CURVED_BRACKET || t.type == INT || t.type == DOUBLE || t.type == STRING || t.type == BOOLEAN || t.type == RETURN || t.type == ID || t.type == SPECIAL_ID || t.type == IF || t.type == WHILE) {
                                return PARSED_OK;
                        }
                }
        }
        return PARSE_ERROR;
}
